somithing with site

--- a/DagbokLaufanda/fuck.html
+++ b/DagbokLaufanda/fuck.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!-- Добавить раздел с анекдотами (Brandara) и список желаний (Óskaskrá) -->
 <!-- А также раздел заметок из личного дневника (AthugiÐ) и  -->
+<!-- А также раздел c фотографиями и именами моих растений (KviÐinn minn) -->
 
 <html>
     <head>
@@ -22,8 +23,8 @@
 <td align="center"> <a href="" class="menu"><font color="#000000" style="--darkreader-inline-color: #000000;" data-darkreader-inline-color=""><b>Óskaskrá</b></font></a></td>
 </tr>
 <tr>
-<td align="center"  style="--darkreader-inline-bgcolor: #000000;" data-darkreader-inline-bgcolor=""><a href="" class="menu"><font color="#000000" style="--darkreader-inline-color: #000000;" data-darkreader-inline-color=""><b>AthugiÐ</b></font></a></td>
-<td align="center" style="--darkreader-inline-bgcolor: #000000;" data-darkreader-inline-bgcolor=""><a href="" class="menu"><font color="#000000" style="--darkreader-inline-color: #000000;" data-darkreader-inline-color=""><b>OTHER</b></font></a></td>
+<td align="center"  style="--darkreader-inline-bgcolor: #000000;" data-darkreader-inline-bgcolor=""><a href="" class="menu"><font color="#000000" style="--darkreader-inline-color: #000000;" data-darkreader-inline-color=""><b>Athugið</b></font></a></td>
+<td align="center" style="--darkreader-inline-bgcolor: #000000;" data-darkreader-inline-bgcolor=""><a href="" class="menu"><font color="#000000" style="--darkreader-inline-color: #000000;" data-darkreader-inline-color=""><b>Kviðinn minn</b></font></a></td>
 </tr>
 
 </tbody></table>
