something with dagbok

--- a/DagbokLaufanda/fuck.html
+++ b/DagbokLaufanda/fuck.html
@@ -35,6 +35,9 @@
             <h1 style="font-family: Josefin Sans; text-align: center">
                 Ég elska SIGUR RÓS
             </h1>
+            <h2 style="font-family: Titillium Web; text-align: center">
+                Mér finnst gaman að elda hrísgrjón
+            </h2>
             <p></p>
         </div>
 
