oskaskra was edited

--- a/DagbokLaufanda/oskaskra.html
+++ b/DagbokLaufanda/oskaskra.html
@@ -1,1 +1,16 @@
 Бинокль, чтобы подсматривать за бытом соседнего дома 
+
+I'm a Software Engineer
+
+About me:
+    Saint Petersburd, Russia
+    Saint Petersburg State University of Telecommunications
+
+Skills:
+    Golang, C, C++, Lua
+    All major operating systems
+    DevOps --[[or maybe Linux system administration]]
+
+Links:
+    GitHub
+    my@mail.com
