--- a/DagbokLaufanda/fuck.html
+++ b/DagbokLaufanda/fuck.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <!-- Добавить раздел с анекдотами (Brandara) и список желаний (Óskaskrá) -->
-<!-- А также раздел заметок из личного дневника (AthugiÐ) и  -->
+<!-- А также раздел заметок из личного дневника (AthugiÐ) -->
 <!-- А также раздел c фотографиями и именами моих растений (KviÐinn minn) -->
+<!-- А также раздел "Я кое-что узнал, расскажу здесь, поэтому вам не придется проходить тот путь, который прошёл я"(Ég fann út) -->
 
 <html>
     <head>
