--- a/DagbokLaufanda/fuck.html
+++ b/DagbokLaufanda/fuck.html
@@ -2,7 +2,8 @@
 <!-- Добавить раздел с анекдотами (Brandara) и список желаний (Óskaskrá) -->
 <!-- А также раздел заметок из личного дневника (AthugiÐ) -->
 <!-- А также раздел c фотографиями и именами моих растений (KviÐinn minn) -->
-<!-- А также раздел "Я кое-что узнал, расскажу здесь, поэтому вам не придется проходить тот путь, который прошёл я"(Ég fann út) -->
+<!-- А также раздел "Я кое-что узнал, расскажу здесь, поэтому вам не придется проходить тот путь, который прошёл я" (Ég fann út) -->
+<!-- О, ну и мои отзывы на книги (Bókagagnrýni) -->
 
 <html>
     <head>
